# Applaudo

./: README.md  pyproject.toml
notebooks/: bartender-sp.lp  bartender-sp.mps  cook-sp.lp  cook-sp.mps  housekeeper-sp.lp  housekeeper-sp.mps  plots.ipynb  sales.ipynb  security-sp.lp  security-sp.mps  server-sp.lp  server-sp.mps  tasks_by_crew_id.ipynb  tasks_by_ship.ipynb
scripts/: export_notebooks_to_pdf.py
sql/: load_duckdb.sql  query1.sql  query2.sql  query3.sql  query4.sql
